ticket view page

--- a/assets/default/less/ticket.less
+++ b/assets/default/less/ticket.less
@@ -27,6 +27,12 @@
   text-decoration: underline;
 }
 
+#ticketInfo{
+  width: 100%;
+  th {
+    width: 125px;
+  }
+}
 
 #ticketTable {
   border: 1px solid #aaa;
