--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -15,21 +15,6 @@ h2 {
   font-size: 16px;
   color: #999;
 }
-/* Helpers */
-.centered {
-  text-align: center;
-}
-.clear {
-  clear: both;
-  height: 1px;
-  visibility: none;
-}
-.hidden {
-  display: none;
-}
-.faded {
-  color: #666;
-}
 /* Pagination */
 #pagination {
   border: 0;
@@ -77,95 +62,19 @@ h2 {
 }
 /* Alerts & Notices */
 #msg_notice {
-  margin: 0;
+  margin-top: 1em;
   padding: 5px 10px 5px 36px;
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 10px;
-  border: 1px solid #0a0;
   background: url('../images/icons/ok.png') 10px 50% no-repeat #e0ffe0;
 }
 #msg_warning {
-  margin: 0;
+  margin-top: 1em;
   padding: 5px 10px 5px 36px;
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 10px;
-  border: 1px solid #f26522;
   background: url('../images/icons/alert.png') 10px 50% no-repeat #ffffdd;
 }
 #msg_error {
-  margin: 0;
+  margin-top: 1em;
   padding: 5px 10px 5px 36px;
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 10px;
-  border: 1px solid #a00;
   background: url('../images/icons/error.png') 10px 50% no-repeat #fff0f0;
-}
-.warning {
-  background: #ffc;
-  font-style: italic;
-}
-.warning strong {
-  text-transform: uppercase;
-  color: #a00;
-  font-style: normal;
-}
-.error {
-  color: #f00;
-}
-.error input {
-  border: 1px solid #f00;
-}
-.button,
-.button:visited {
-  background: #222;
-  display: inline-block;
-  font-size: 16px;
-  padding: 8px 16px 6px 16px;
-  width: 160px;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-  position: relative;
-  cursor: pointer;
-  font-family: helvetica, arial, sans-serif;
-}
-.button:hover {
-  background-color: #111;
-  color: #fff;
-}
-.button:active {
-  top: 1px;
-  box-shadow: none;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-}
-.button,
-.button:visited,
-.green.button,
-.green.button:visited {
-  background-color: #91bd09;
-}
-.green.button:hover {
-  background-color: #749a02;
-}
-.blue.button,
-.blue.button:visited {
-  background-color: #00AEEF;
-}
-.blue.button:hover {
-  background-color: #0299d2;
 }
 body {
   background-color: #c8c8c8;
@@ -426,6 +335,12 @@ a.navbar-brand img {
 }
 .Icon:hover {
   text-decoration: underline;
+}
+#ticketInfo {
+  width: 100%;
+}
+#ticketInfo th {
+  width: 125px;
 }
 #ticketTable {
   border: 1px solid #aaa;
