--- a/assets/default/less/ticket.less
+++ b/assets/default/less/ticket.less
@@ -27,6 +27,13 @@
   text-decoration: underline;
 }
 
+#ticketThread {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
 #ticketInfo{
   width: 100%;
   th {
