Major overhaul of index page and navbar

--- a/assets/default/less/main-layout.less
+++ b/assets/default/less/main-layout.less
@@ -54,6 +54,15 @@ a.navbar-brand {
       padding-right: 40px;
     }
   }
+  .flag {
+    display: inline-block;
+    padding: 0;
+    margin-left: 1em;
+    p {
+      margin: -4px 0 0 0;
+      padding-left: 2em;
+    }
+  }
 }
 
 
