--- a/assets/default/less/main-layout.less
+++ b/assets/default/less/main-layout.less
@@ -33,10 +33,10 @@ a.navbar-brand {
   }
 }
 
-#nav {
+.nav {
   li {
     white-space: nowrap;
-    a.home:before, a.kb:before, a.new:before, a.status:before, a.tickets:before {
+    a.home:before, a.kb:before, a.new:before, a.status:before, a.tickets:before, a.lock:before {
       content: "";
       display: block;
       width: 20px;
@@ -44,6 +44,7 @@ a.navbar-brand {
       float: left;
   }
     a.home:before    { background: url('../images/icons/home.png') no-repeat;}
+    a.lock:before    { background: url('../images/icons/lock.png') no-repeat;}
     a.kb:before      { background: url('../images/icons/kb.png') no-repeat;}
     a.new:before     { background: url('../images/icons/new.png') no-repeat; }
     a.status:before  { background: url('../images/icons/status.png') no-repeat; }
